# Text-Analyzer

./: CMakeLists.txt  CMakePresets.json  README.md
helpers/: io.cpp  io.h
src/: main.cpp  text_analyzer.cpp  text_analyzer.h
test/: gtestmain.cpp  text_analyzer_gtest.cpp
